objects/geopointe__Assignment__c.object
<CustomObject>
    <description>The is a legacy Geopointe object. It is no longer used and can be safely deleted.</description>
    <fields>
        <fullName>geopointe__Assignment_Plan__c</fullName>
        <label>Geopointe Assignment Plan</label>
        <referenceTo>geopointe__Assignment_Plan__c</referenceTo>
        <relationshipLabel>Geopointe Assignments</relationshipLabel>
        <relationshipName>Geopointe_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>geopointe__Shape__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Geopointe Shape</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>geopointe__Shape__c.geopointe__Usage_Type__c</field>
                <operation>equals</operation>
                <value>GeoShape</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>geopointe__Shape__c</referenceTo>
        <relationshipLabel>Deprecated</relationshipLabel>
        <relationshipName>Geopointe_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Geopointe_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DELETE ME (Assignment)</label>
    <nameField>
        <label>Geopointe Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DELETE ME</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>